# shotstriper

./: LICENSE  README.md  pyproject.toml
palettes-data/: christmas.json  coffee.json  cold.json  cream.json  dark.json  earth.json  fall.json  food.json  gold.json  gradient.json  happy.json  kids.json  light.json  nature.json  neon.json  night.json  pastel.json  rainbow.json  retro.json  sea.json  skin.json  sky.json  space.json  spring.json  summer.json  sunset.json  vintage.json  warm.json  wedding-data.json  winter-data.json
shotstriper/: main.py  palettes.py
